<resources>
    <string name="app_name">My Application</string>
    <string name="logo_placeholder">Logo Placeholder</string>
    <string name="select_role">Please Select Role</string>
    <string name="select_language">Please Select Language</string>
    <string name="teacher_button">Teacher</string>
    <string name="student_button">Student</string>
    <string name="help_button">Help</string>
    <string name="enter_name">Enter Name</string>


    <string-array name="language_array">
        <item>German</item>
        <item>Spanish</item>
        <item>Scots-Gaelic</item>
        <item>Italian</item>
        <item>French</item>
        <item>Portuguese</item>
        <item>Danish</item>
    </string-array>
</resources>
